tests/neg/structural.scala

object structural {
  
  type A = { def a: Int }
  
  trait B { def b: Int }
}
